--- a/app/globals.css
+++ b/app/globals.css
@@ -11,12 +11,12 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 22, 160, 133;
-    --background-end-rgb: 244, 208, 63;
+    --background-start-rgb: 0, 171, 102;
+    --background-end-rgb: 80, 200, 120;
   }
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
@@ -24,7 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
-}
+} */
 
 @layer utilities {
   .text-balance {
